# reflex-collections

./: .#Core.hs  .#Lens.hs  .gitignore  Array.hs  Core.hs  HoldableArray.hs  LICENSE  Lens.hs  Maps.hs  Readme.md  default.nix  package-overlay.nix  reflex-collections.cabal
app/: CodeCompare.hs  Main.hs  Simple.hs
src/Reflex/Collections/: Collections.hs  CollectionsDM.hs  CollectionsIM.hs  CollectionsIso.hs  ComposedIntMap.hs  Core.hs  DMapIso.hs  DMappable.hs  Diffable.hs  HasFan.hs  HoldableArray.hs  IntMapIso.hs  IntMappable.hs  KeyMappable.hs  KeyedCollection.hs  Lens.hs  Maps.hs  SelfEditingCollection.hs  Sequenceable.hs  SequenceableClasses.hs  ToPatchType.hs  TotalArray.hs  WithEmpty.hs
test/: Main.hs
