name:                reflex-collections
version:             0.1.0.0
synopsis:            generalized collection functions for reflex
description:         Please see README.md
homepage:            http://github.com/adamConnerSax/reflex-collections#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Conner-Sax
maintainer:          adam_conner_sax@yahoo.com
copyright:           2018 Adam Conner-Sax
category:            Web
build-type:          Simple
cabal-version:       >=1.10

flag wkwebview
  description: Use wkWebview control rather than ghcjs
  default: False

flag warp
  description: Use warp rather than ghcjs
  default: True

flag ghcjs
  description: Use GHCJS
  default: False
  
                     
library
  if flag(wkwebview) || flag(warp)
   cpp-options: -DUSE_WKWEBVIEW -DUSE_JSADDLE
  hs-source-dirs: src
  exposed-modules:
                  Reflex.Collections.Collections
                  Reflex.Collections.DMapIso
                  Reflex.Collections.Sequenceable
                  Reflex.Collections.KeyedCollection
                  Reflex.Collections.ToPatchType
                  Reflex.Collections.HasFan
                  Reflex.Collections.Diffable
  other-modules:

  if flag(wkwebview) || flag(warp)
   build-depends: ghcjs-dom 
                , jsaddle
  else
   build-depends: ghcjs-dom
  build-depends:       base >= 4.7 && < 5
                     , dependent-map
                     , array
                     , reflex
                     , lens
                     , mtl
                     , ref-tf
                     , containers
                     , these
                     , hashable
                     , safe
                     , unordered-containers >= 0.2.8.0
  if impl(ghcjs)
    build-depends:     ghcjs-base

  default-language:    Haskell2010
  ghc-prof-options: -fprof-auto
  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields -O2       


executable test
  if flag(wkwebview)
    buildable: False
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(warp)
   cpp-options: -DUSE_WARP -DUSE_JSADDLE
   build-depends: jsaddle-warp
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS 
                , cabal-macosx >= 0.2.3.4 && < 0.3
  build-depends:       base
                     , array
                     , reflex
                     , reflex-collections
                     , ref-tf
                     , reflex-dom
                     , ghcjs-dom
                     , containers
                     , text
                     , process
                     , safe
  default-language:    Haskell2010


executable test-simple
  if flag(wkwebview)
    buildable: False
  hs-source-dirs:      app
  main-is:             Simple.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  if flag(warp)
   cpp-options: -DUSE_WARP -DUSE_JSADDLE
   build-depends: jsaddle-warp
  if flag(ghcjs)
   cpp-options: -DUSE_GHCJS 
                , cabal-macosx >= 0.2.3.4 && < 0.3
  build-depends:       base
                     , array
                     , reflex
                     , reflex-collections
                     , ref-tf
                     , reflex-dom
                     , ghcjs-dom
                     , containers
                     , text
                     , process
                     , safe
  default-language:    Haskell2010


  
  
source-repository head
  type:     git
  location: https://github.com/adamConnerSax/reflex-collections
